# sandpiles_parallel

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
benches/: bench.rs
examples/: main.rs  raw_bench.rs
src/: field.rs  get.rs  lib.rs  main.rs
