[package]
name = "sandpiles_parallel"
version = "0.1.0"
authors = ["Sviatoslav Alekseev <sviatoslav.alekseev@nordigy.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git="https://github.com/not-fl3/macroquad", rev = "32bb775" }
num-traits = "0.2"