[package]
name = "sandpiles_parallel"
version = "0.1.0"
authors = ["Sviatoslav Alekseev <sviatoslav.alekseev@nordigy.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git="https://github.com/not-fl3/macroquad", rev = "32bb775" }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[[bench]]
name = "bench"
harness = false