[package]
name = "sandpiles_parallel"
version = "0.1.0"
authors = ["Sviatoslav Alekseev <sviatoslav.alekseev@nordigy.ru>"]
edition = "2018"

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
macroquad = { git="https://github.com/not-fl3/macroquad", rev = "32bb775" }
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[[bench]]
name = "bench"
harness = false

[features]
elapsed = []